.kubernetes/aws/mesh/gateway_mesh.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: ing-gw-go-account
#  namespace: test-a
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-name: ing-gw-go-account
#    service.beta.kubernetes.io/aws-load-balancer-type: external
#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
#    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
#    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
#    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
#    service.beta.kubernetes.io/aws-load-balancer-attributes: deletion_protection.enabled=false
#spec:
#  ports:
#  - name: http
#    port: 5000
#    targetPort: 5000
#    protocol: TCP
#  type: LoadBalancer
#  selector:
#    app: svc-go-account
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: ing-gw-go-account
#  namespace: test-a
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: ing-gw-go-account
#  template:
#    metadata:
#      labels:
#        app: ing-gw-go-account
#    spec:
#      containers:
#        - name: envoy
#          image: 840364872350.dkr.ecr.us-east-2.amazonaws.com/aws-appmesh-envoy
#          ports:
#            - containerPort: 5000
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ing-gw-go-account
  namespace: test-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ing-gw-go-account
  template:
    metadata:
      labels:
        app: ing-gw-go-account
    spec:
      containers:
        - name: envoy
          image: 840364872350.dkr.ecr.us-east-2.amazonaws.com/aws-appmesh-envoy
          ports:
            - containerPort: 5000
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "CAP_NET_BIND_SERVICE"]
