.kubernetes/aws/mesh/mesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: svc-go-account
  namespace: test-a
spec:
  awsName: svc-go-account.test-a.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: go-account-virtual-router
